# wxpesel

./: CMakeLists.txt  LICENSE  README.md
include/: MainFrame.h  PeselApp.h  PeselValidator.h
src/: CMakeLists.txt  MainFrame.cc  PeselApp.cc  PeselValidator.cc
